2012-03-04  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/menuentry.c (options): Remove
	GRUB_ARG_OPTION_REPEATABLE.
	Reported by: Andreas Vogel

2012-03-04  Andreas Vogel <Andreas.Vogel@anvo-it.de>

	* grub-core/normal/main.c (grub_normal_free_menu): Fix memory leak.

2012-03-04  Hideki EIRAKU <hdk1983@gmail.com>

	* grub-core/normal/menu_entry.c (kill_line): Fix a crash and off-by-one
	error.

2012-03-04  Vladimir Serbinenko  <phcoder@gmail.com>

	Use sort -V by the idea of Georgi Georgiev.

	* util/grub-mkconfig_lib.in (version_sort): New function.
	(version_test_numeric): Use version_sort.

2012-03-04  Vladimir Serbinenko  <phcoder@gmail.com>

	Use submenus in grub-mkconfig.

	* util/grub-mkconfig.in: Define GRUB_ACTUAL_DEFAULT.
	* util/grub-mkconfig_lib.in (grub_quote): New function.
	(gettext_printf): Use gettext and not gettext_quoted to fix several
	messages.
	* util/grub.d/10_hurd.in: Use submenus.
	* util/grub.d/10_kfreebsd.in: Likewise.
	* util/grub.d/10_linux.in: Likewise.
	* util/grub.d/10_netbsd.in: Likewise.
	* util/grub.d/20_linux_xen.in: Likewise.
	* util/grub.d/30_os-prober.in: Likewise.
	* util/grub.d/10_illumos.in: Add missing quoting.
	* util/grub.d/10_windows.in: Likewise.

2012-03-04  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix menu title instability bug.

	* grub-core/commands/menuentry.c (options): New option --id.
	(grub_normal_add_menu_entry): New argument id. All users updated.
	(grub_cmd_menuentry): Handle --id.
	(grub_menu_init): Accept unknown arguments.
	* grub-core/normal/main.c (features): Add feature_menuentry_id and
	feature_menuentry_options.
	* grub-core/normal/menu.c (grub_menu_execute_entry): Use id for
	saved_entry.
	(get_entry_number): Match with id as well.
	* include/grub/menu.h (grub_menu_entry): New member id.
	* util/grub-mkconfig_lib.in (grub_get_device_id): New function.
	* util/grub.d/00_header.in: Define menuentry_id_option.
	* util/grub.d/10_hurd.in: Define id.