@@ -597,7 +597,7 @@ grub_cmd_initrd (grub_command_t cmd __attribute__ ((unused)),
       if (! files[i])
 	goto fail;
       nfiles++;
-      initrd_size += grub_file_size (files[i]);
+      initrd_size += ALIGN_UP (grub_file_size (files[i]), 4);
       grub_dprintf ("linux", "File %d: %s\n", i, argv[i]);
     }
 
@@ -624,6 +624,8 @@ grub_cmd_initrd (grub_command_t cmd __attribute__ ((unused)),
 	  goto fail;
 	}
       ptr += cursize;
+      grub_memset (ptr, 0, ALIGN_UP_OVERHEAD (cursize, 4));
+      ptr += ALIGN_UP_OVERHEAD (cursize, 4);
     }
  fail:
   for (i = 0; i < nfiles; i++)
