@@ -468,7 +468,7 @@ grub_cmd_initrd (grub_command_t cmd __attribute__ ((unused)),
       if (! files[i])
 	goto fail;
       nfiles++;
-      size += grub_file_size (files[i]);
+      size += ALIGN_UP (grub_file_size (files[i]), 4);
     }
 
   {
@@ -499,6 +499,8 @@ grub_cmd_initrd (grub_command_t cmd __attribute__ ((unused)),
 	  goto fail;
 	}
       ptr += cursize;
+      grub_memset (ptr, 0, ALIGN_UP_OVERHEAD (cursize, 4));
+      ptr += ALIGN_UP_OVERHEAD (cursize, 4);
     }
 
 #ifdef GRUB_MACHINE_MIPS_QEMU_MIPS
